--- a/styles/output.css
+++ b/styles/output.css
@@ -67,7 +67,22 @@ body {
   line-height: inherit;
   /* 2 */
 }
+::-webkit-scrollbar {
+  width: 12px; 
+  height: 10px; 
+}
 
+::-webkit-scrollbar-track {
+  background: transparent; 
+  border-radius: 10px; 
+}
+
+
+::-webkit-scrollbar-thumb {
+  background-color: #ef4444; 
+  border-radius: 10px; 
+  border: 2px solid black; 
+}
 /*
 1. Add the correct height in Firefox.
 2. Correct the inheritance of border color in Firefox. (https://bugzilla.mozilla.org/show_bug.cgi?id=190655)
@@ -756,6 +771,10 @@ video {
 
 .mb-2 {
   margin-bottom: 0.5rem;
+}
+
+.mb-4 {
+  margin-bottom: 1rem;
 }
 
 .mb-6 {
@@ -1455,6 +1474,10 @@ video {
   gap: 0.5rem;
 }
 
+.gap-5 {
+  gap: 1.25rem;
+}
+
 .gap-7 {
   gap: 1.75rem;
 }
@@ -1913,6 +1936,11 @@ video {
 
 .border-none {
   border-style: none;
+}
+
+.border-red-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(239 68 68 / var(--tw-border-opacity));
 }
 
 .bg-\[rgb\(255\2c 0\2c 0\)\] {
